# matplotlib-modern-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
docs/: API.md
examples/: bar_example.cpp  errorbar_example.cpp  fill_example.cpp  get_fignums_example.cpp  loglog_example.cpp  plot_example.cpp  sca_example.cpp  scatter_example.cpp  semilogx_example.cpp  semilogy_example.cpp  step_example.cpp  subplot2grid_example.cpp  subplot_example.cpp  subplots_example.cpp  subplots_mosaic.cpp  twinx_example.cpp  twiny_example.cpp
include/: Axes.h  AxesGrid.h  Configs.h  Detail.h  Figure.h  Helper.h  Matplotlib.h  NumpyUtils.h  PyPlot.h  PyPtr.h  Subplot2Grid.h  configs.h  detail.h  functions.h  helper.h  matplotlib.h  numpy_utils.h
inlcude/: Axes.h  Figure.h  Interpreter.h  configs.h  functions.h  matplotlib.h  matplotlibcpp.h
py_examples/: bar_example.py  close_example.py  errorbar_example.py  fill_example.py  get_figlabels_nums.py  loglog_example.py  scatter_example.py  semilogx_example.py  semilogy_example.py  step_example.py  subplot2grid_example.py  subplot_example.py  subplot_mosaic_example.py  subplots.py  tempCodeRunnerFile.py  text_example.py  tick_params.py  tight_layout_example.py  twinx_example.py  twiny_example.py
src/: get_fignums_example.cpp  plot_example.cpp  sca_example.cpp  step_example.cpp  subplot2grid_example.cpp  subplot_example.cpp  subplots_example.cpp  twinx_example.cpp  twiny_example.cpp
tests/: test_bar.cpp  test_barh.cpp  test_basic.cpp  test_fill.cpp
